# poetry-config

./: pyproject.toml
app.myConfig/: pyproject.toml
app.myConfig/myConfig/: __init__.py  defaults.py
app.myConfig/tests/: conftest.py  implicit_test.py  test_first.py
bch_config/: __init__.py  console.py  constants.py  usage.py  util.py
fig/: README.rst  pyproject.toml
fig/tests/: test_fig.py
tests/: conftest.py  explicit_test.py  implicit_test.py
tests/fixtures/config/foo.bar/: fig.ini
