[tool.poetry.scripts]
bch-config-usage  = 'myConfig.console:usage'
bch-config        = 'myConfig.console:run'
bch-config-ini-dump  = 'myConfig.console:dump_ini'

[tool.poetry]
name = "bch_config"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <nobody@nowhere>"]


[tool.poetry.dependencies]
python = "^3.7"
#myInject  = {git = "https://github.com/bryanhann/poetry-myInject", tag = "0.1.1"  }
bch_inject = {git = "https://github.com/bryanhann/poetry.bch_inject", tag = "0.1.2"  }
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
