[tool.poetry.scripts]
bch-myconfig-usage  = 'myConfig.console:usage'
bch-myconfig        = 'myConfig.console:run'
bch-myconfig-ini-dump  = 'myConfig.console:dump_ini'

[tool.poetry]
name = "myConfig"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <nobody@nowhere>"]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
